k8s/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mon-app
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mon-app
  template:
    metadata:
      labels:
        app: mon-app
    spec:
      containers:
        - name: mon-app
          image: ghcr.io/domiq44/mon-app:REPLACED_BY_CI
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
