k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mon-app
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: mon-app
  ports:
    - port: 80
      targetPort: 5000
